fixed text-overlaping

--- a/main.css
+++ b/main.css
@@ -103,6 +103,10 @@ main{
     font-size:30px;
     padding: 20px;
 }
+main > .output{
+    font-size: 16px;
+    display: inline-block;
+}
 
 
 .custom-bottom-value{
